# Agentic-Code-Review

./: .env.example  .gitignore  PLAN.md  README.md  api.py  demo_flawed.py  github_pr.py  main.py  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: pr-review.yml
agents/: architecture_agent.py  documentation_agent.py  external_tools.py  performance_agent.py  quality_agent.py  security_agent.py  supervisor_agent.py
backend/: action_smoke_fixture.py  api.py  github_pr.py  jobs.py  main.py  pipeline.py  requirements.txt  storage.py
backend/agents/: architecture_agent.py  documentation_agent.py  external_tools.py  performance_agent.py  quality_agent.py  security_agent.py  security_patterns.py  supervisor_agent.py  thresholds.py  treesitter_ast.py  treesitter_js.py
backend/graph/: repo_graph.py  review_graph.py
backend/models/: state.py
backend/tests/: conftest.py  test_api.py  test_architecture.py  test_ast_visitors.py  test_dedupe.py  test_diff_and_url.py  test_jobs.py  test_languages.py  test_llm_agents.py  test_private_repo.py  test_repo_graph.py  test_storage.py  test_supervisor_report.py  test_test_noise.py  test_tool_mappers.py  test_treesitter_ast.py  test_treesitter_go_java.py  test_treesitter_js.py
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
graph/: review_graph.py
models/: state.py
tests/: test_api.py  test_diff_and_url.py  test_llm_agents.py  test_walk.py
