[project]
name = "agentic-code-review"
version = "0.1.0"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "models*", "graph*"]

[tool.pytest.ini_options]
pythonpath = ["."]      # so tests can import agents/, github_pr, pipeline, etc.
testpaths = ["tests"]
